fix: Update background color of Text Toggler component for improved visibility

--- a/React Learning/src/components/TextToggler/TextToggler.css
+++ b/React Learning/src/components/TextToggler/TextToggler.css
@@ -5,7 +5,7 @@
   align-items: center;
   justify-content: center;
   height: 100vh;
-  background-color: #201f1f;
+  background-color: #071d35;
   color: #ededed;
 }
 
